--- a/src/Scss/ConnectionsComponent.scss
+++ b/src/Scss/ConnectionsComponent.scss
@@ -7,14 +7,25 @@
 }
 
 .connected-user {
+    // background-color: #f0f5f5;
+    // border: 2px solid #333;
+    // border-radius: 10px;
+    // padding: 20px;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
+    // justify-content: space-between;
+    // cursor: pointer;
+
     background-color: #f0f5f5;
     border: 2px solid #333;
     border-radius: 10px;
     padding: 20px;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: auto 1fr;
     align-items: center;
-    justify-content: space-between;
+    gap: 20px;
+    cursor: pointer;
 
     img {
         width: 100px;
@@ -41,7 +52,7 @@
 
     .connect-button {
         background-color: #4caf50;
-        width: 70%;
+        // width: 70%;
         color: #fff;
         border: none;
         border-radius: 50px;
@@ -55,7 +66,7 @@
     }
     .unfollow-button {
         background-color: rgb(255, 166, 0);
-        width: 70%;
+        // width: 70%;
         color: #fff;
         border: none;
         border-radius: 50px;
@@ -66,5 +77,23 @@
         &:hover {
             background-color: rgb(192, 125, 0);
         }
+    }
+    .message-button {
+        background-color: rgb(255, 166, 0);
+        // width: 70%;
+        color: #fff;
+        border: none;
+        border-radius: 50px;
+        padding: 8px 16px;
+        cursor: pointer;
+        font-weight: 600;
+        transition: background-color 0.3s ease;
+        &:hover {
+            background-color: rgb(192, 125, 0);
+        }
+    }
+
+    &:hover {
+        background-color: #cacaca;
     }
 }
