--- a/src/components/common/SearchedUsers/index.scss
+++ b/src/components/common/SearchedUsers/index.scss
@@ -45,6 +45,36 @@
         }
     }
 
+    .unfollow-button {
+        background-color: rgb(255, 166, 0);
+        // width: 70%;
+        color: #fff;
+        border: none;
+        border-radius: 50px;
+        padding: 8px 16px;
+        cursor: pointer;
+        font-weight: 600;
+        transition: background-color 0.3s ease;
+        &:hover {
+            background-color: rgb(192, 125, 0);
+        }
+    }
+
+    .message-button {
+        background-color: rgb(255, 166, 0);
+        // width: 70%;
+        color: #fff;
+        border: none;
+        border-radius: 50px;
+        padding: 8px 16px;
+        cursor: pointer;
+        font-weight: 600;
+        transition: background-color 0.3s ease;
+        &:hover {
+            background-color: rgb(192, 125, 0);
+        }
+    }
+
     @media (max-width: 768px) {
         grid-template-columns: 1fr;
         text-align: center;
