--- a/src/components/common/ProfileCard/index.scss
+++ b/src/components/common/ProfileCard/index.scss
@@ -7,169 +7,210 @@
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    
-    .profile-info {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      color: rgba(0, 0, 0, 0.9);
-      margin-bottom: 15px;
-  
-      .profile-image{
-        object-fit: contain;
-        margin-top: 10%;
-        width: 100px;
-        height: 100px;
-        object-fit: cover;
-        border: 2px solid #737373;
-        padding: 5px;
-        border-radius: 50%;
-        cursor: pointer;
-      }
 
-      .website {
-        color: rgb(18, 66, 168);
-        -webkit-link: rgb(18, 66, 168);
-      }
-  
-      .website:link {
-        color: rgb(18, 66, 168);
-      }
-  
-      .right-info {
+    .profile-info {
         display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        margin-left: 10px;
-        margin-top: 9%;
-  
-        .company,
-        .college {
-          margin: 5px 0;
-          font-size: 16px;
-          font-weight: bold;
+        justify-content: space-between;
+        align-items: center;
+        color: rgba(0, 0, 0, 0.9);
+        margin-bottom: 15px;
+
+        .profile-image {
+            object-fit: contain;
+            margin-top: 10%;
+            width: 100px;
+            height: 100px;
+            object-fit: cover;
+            border: 2px solid #737373;
+            padding: 5px;
+            border-radius: 50%;
+            cursor: pointer;
         }
-      }
+
+        .website {
+            color: rgb(18, 66, 168);
+            -webkit-link: rgb(18, 66, 168);
+        }
+
+        .website:link {
+            color: rgb(18, 66, 168);
+        }
+
+        .right-info {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            margin-left: 10px;
+            margin-top: 9%;
+
+            .company,
+            .college {
+                margin: 5px 0;
+                font-size: 16px;
+                font-weight: bold;
+            }
+            .connect-button {
+                background-color: #4caf50;
+                // width: 70%;
+                color: #fff;
+                border: none;
+                border-radius: 50px;
+                padding: 8px 16px;
+                cursor: pointer;
+                font-weight: 600;
+                transition: background-color 0.3s ease;
+                &:hover {
+                    background-color: #45a055;
+                }
+            }
+            .unfollow-button {
+                background-color: rgb(255, 166, 0);
+                // width: 70%;
+                color: #fff;
+                border: none;
+                border-radius: 50px;
+                padding: 8px 16px;
+                cursor: pointer;
+                font-weight: 600;
+                transition: background-color 0.3s ease;
+                &:hover {
+                    background-color: rgb(192, 125, 0);
+                }
+            }
+            .message-button {
+                background-color: rgb(255, 166, 0);
+                // width: 70%;
+                color: #fff;
+                border: none;
+                border-radius: 50px;
+                padding: 8px 16px;
+                cursor: pointer;
+                font-weight: 600;
+                transition: background-color 0.3s ease;
+                &:hover {
+                    background-color: rgb(192, 125, 0);
+                }
+            }
+        }
     }
-  
+
     .extra-info {
-      color: black;
-      margin-top: 20px;
-      padding-top: 5px;
-      border-top: 1px solid #ccc;
+        color: black;
+        margin-top: 20px;
+        padding-top: 5px;
+        border-top: 1px solid #ccc;
     }
-  
+
     .aboutme,
     .skills {
-      font-family: Arial, sans-serif;
-      color: rgba(0, 0, 0, 0.9);
-      font-size: 16px;
-      margin-bottom: 10px;
+        font-family: Arial, sans-serif;
+        color: rgba(0, 0, 0, 0.9);
+        font-size: 16px;
+        margin-bottom: 10px;
     }
-  
+
     .skills-label {
-      font-weight: bold;
-    }
-  
-    .userName {
-      font-family: Arial, sans-serif;
-      color: rgba(0, 0, 0, 0.9);
-      font-weight: 600;
-      font-size: 24px;
-      margin-bottom: 5px;
-    }
-  
-    .userEmail {
-      font-family: Arial, sans-serif;
-      color: rgba(0, 0, 0, 0.9);
-      font-weight: 600;
-      font-size: 18px;
-      margin-bottom: 10px;
-    }
-  
-    .text {
-      font-family: Arial, sans-serif;
-      font-size: 16px;
-      color: rgba(0, 0, 0, 0.9);
-      line-height: 1.5;
-      max-width: 350px;
-      margin-top: 10px;
-    }
-  
-    .edit-btn {
-      button {
-        cursor: pointer;
-        background-color: #4caf50;
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-        padding: 8px 16px;
-        font-size: 14px;
         font-weight: bold;
-        transition: background-color 0.3s ease;
-        box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
-  
-        &:hover {
-          background-color: #45a049;
-        }
-      }
     }
-  
-    @media screen and (max-width: 768px) {
-      .profile-info {
-        flex-direction: column;
-        align-items: flex-start;
-  
-        .right-info {
-          margin-top: 0;
-        }
-      }
-  
-      .extra-info {
+
+    .userName {
+        font-family: Arial, sans-serif;
+        color: rgba(0, 0, 0, 0.9);
+        font-weight: 600;
+        font-size: 24px;
+        margin-bottom: 5px;
+    }
+
+    .userEmail {
+        font-family: Arial, sans-serif;
+        color: rgba(0, 0, 0, 0.9);
+        font-weight: 600;
+        font-size: 18px;
+        margin-bottom: 10px;
+    }
+
+    .text {
+        font-family: Arial, sans-serif;
+        font-size: 16px;
+        color: rgba(0, 0, 0, 0.9);
+        line-height: 1.5;
+        max-width: 350px;
         margin-top: 10px;
-      }
     }
-  }
-  
-  .post-status-parent {
+
+    .edit-btn {
+        button {
+            cursor: pointer;
+            background-color: #4caf50;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            padding: 8px 16px;
+            font-size: 14px;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+            box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+
+            &:hover {
+                background-color: #45a049;
+            }
+        }
+    }
+
+    @media screen and (max-width: 768px) {
+        .profile-info {
+            flex-direction: column;
+            align-items: flex-start;
+
+            .right-info {
+                margin-top: 0;
+            }
+        }
+
+        .extra-info {
+            margin-top: 10px;
+        }
+    }
+}
+
+.post-status-parent {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-  
+
     .post-status {
-      width: 90%;
-      max-width: 500px;
-      height: 120px;
-      background-color: #f0f5f5;
-      margin-top: 20px;
-      border: 2px solid #dbe3e3;
-      border-radius: 10px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
-  
-      .create-post {
-        width: 100%;
-        height: 40px;
-        text-align: center;
-        font-family: Arial, sans-serif;
-        color: #fff;
-        font-size: 16px;
-        background-color: #4caf50;
-        border: none;
-        border-radius: 20px;
-        cursor: pointer;
-        padding: 0 20px;
-        font-weight: bold;
-        transition: background-color 0.3s ease;
-        box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
-  
-        &:hover {
-          background-color: #45a049;
+        width: 90%;
+        max-width: 500px;
+        height: 120px;
+        background-color: #f0f5f5;
+        margin-top: 20px;
+        border: 2px solid #dbe3e3;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+
+        .create-post {
+            width: 100%;
+            height: 40px;
+            text-align: center;
+            font-family: Arial, sans-serif;
+            color: #fff;
+            font-size: 16px;
+            background-color: #4caf50;
+            border: none;
+            border-radius: 20px;
+            cursor: pointer;
+            padding: 0 20px;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+            box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+
+            &:hover {
+                background-color: #45a049;
+            }
         }
-      }
     }
-  }
-  
+}
