--- a/src/Scss/MessagesComponent.scss
+++ b/src/Scss/MessagesComponent.scss
@@ -1,10 +1,14 @@
 .messages-component-container {
+    height: 80vh; /* Occupy full height of the viewport */
+    overflow-y: auto; /* Enable vertical scrolling */
+    overflow-x: hidden; /* Hide horizontal scrollbar */
     display: flex;
     flex-direction: column;
     gap: 20px;
     padding: 20px;
     max-width: 800px; 
     margin: 0 auto;
+    position: relative; /* Set position relative to contain absolute positioning */
 
     .message-preview {
         background-color: #ffffff;
@@ -12,12 +16,13 @@
         border-radius: 10px;
         padding: 15px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        width: 100%;
+        width: 95%;
+        margin-bottom: 10px; /* Add margin to create space between messages and input */
 
         .message-header {
             display: flex;
             justify-content: space-between;
-            align-items: center; /* Align items vertically */
+            align-items: center;
             margin-bottom: 10px;
 
             .message-sender {
@@ -39,27 +44,29 @@
         }
     }
 
-    .Message-input {
-        width: 100%;
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        margin-bottom: 10px;
-        font-size: 16px;
-    }
+    .message-input-container {
+        position: sticky; /* Set position sticky for fixed behavior */
+        bottom: 20px; /* Space from the bottom */
+        width: 100%; /* Take full width */
+        display: flex;
+        justify-content: space-between; /* Align items horizontally */
 
-    .Message-btn {
-        background-color: #4caf50;
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-        padding: 10px 20px;
-        cursor: pointer;
-        font-size: 16px;
+        .Message-input {
+            width: calc(100% - 100px); /* Adjust input width */
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
+        }
 
-        &:disabled {
-            background-color: #ccc;
-            cursor: not-allowed;
+        .Message-btn {
+            background-color: #4caf50;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 20px;
+            cursor: pointer;
+            font-size: 16px;
         }
     }
 
