--- a/src/components/common/Loader/index.scss
+++ b/src/components/common/Loader/index.scss
@@ -2,14 +2,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100vw;
     height: 100vh;
     flex-direction: column;
     gap: 20px;
+    position: fixed;
+    top: 0;
+    left: 0;
 
     p {
-        font: Helvetica;
+        font-family: 'Helvetica', sans-serif;
         font-weight: 500;
         font-size: 20px;
-        color: red;
+        color: whitesmoke;
     }
 }
