--- a/src/components/common/PostsCard/index.scss
+++ b/src/components/common/PostsCard/index.scss
@@ -1,3 +1,5 @@
+@import "../../../GeneralTheme.scss";
+
 .post-container {
     display: flex;
     // flex-direction: column;
@@ -25,7 +27,7 @@
 
 .posts-card,
 .create-post-card {
-    width: 100%;
+    width: 50vw;
     max-width: 600px;
     height: auto;
     background-color: #f0f5f5;
@@ -96,9 +98,9 @@
 }
 
 .posts-card .action-container .action-icon:hover {
-    color: #000000;
+    color: $third;
     background-color: #b7b7b7;
-    border-radius: 50%;
+    border-radius: 30%;
 }
 
 @media (max-width: 480px) {
