--- a/src/Scss/ConnectionsComponent.scss
+++ b/src/Scss/ConnectionsComponent.scss
@@ -1,22 +1,20 @@
+@import "../GeneralTheme.scss";
+
 .connections-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
     padding: 2%;
     width: 97.1%;
+
+    @media screen and (max-width: 768px) {
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        gap: 10px;
+        padding: 1%;
+    }
 }
 
 .connected-user {
-    // background-color: #f0f5f5;
-    // border: 2px solid #333;
-    // border-radius: 10px;
-    // padding: 20px;
-    // display: flex;
-    // flex-direction: column;
-    // align-items: center;
-    // justify-content: space-between;
-    // cursor: pointer;
-
     background-color: #f0f5f5;
     border: 2px solid #333;
     border-radius: 10px;
@@ -33,6 +31,11 @@
         border-radius: 50%;
         object-fit: cover;
         margin-bottom: 20px;
+
+        @media screen and (max-width: 768px) {
+            width: 80px;
+            height: 80px;
+        }
     }
 
     .user-details {
@@ -43,16 +46,32 @@
         color: #333;
         font-weight: bold;
         margin-bottom: 5px;
+        font-size: 95%;
+        @media screen and (min-width: 642px) and (max-width: 768px) {
+            font-size: 60%;
+        }
+        @media screen and (min-width: 422px) and (max-width: 490px) {
+            font-size: 60%;
+        }
     }
 
     .headline {
         color: #666;
         margin-bottom: 10px;
+        font-size: 80%;
+        @media screen and (min-width: 642px) and (max-width: 768px) {
+            font-size: 60%;
+        }
+        @media screen and (min-width: 422px) and (max-width: 490px) {
+            font-size: 60%;
+        }
     }
 
-    .connect-button {
-        background-color: #4caf50;
-        // width: 70%;
+    .connect-button,
+    .unfollow-button,
+    .message-button {
+        // background-color: #4caf50;
+        background-color: $third;
         color: #fff;
         border: none;
         border-radius: 50px;
@@ -60,34 +79,20 @@
         cursor: pointer;
         font-weight: 600;
         transition: background-color 0.3s ease;
+
         &:hover {
-            background-color: #45a055;
+            background-color: darken( $third, 15%);
+        }
+
+        @media screen and (max-width: 768px) {
+            padding: 6px 12px;
         }
     }
-    .unfollow-button {
-        background-color: rgb(255, 166, 0);
-        // width: 70%;
-        color: #fff;
-        border: none;
-        border-radius: 50px;
-        padding: 8px 16px;
-        cursor: pointer;
-        font-weight: 600;
-        transition: background-color 0.3s ease;
-        &:hover {
-            background-color: rgb(192, 125, 0);
-        }
-    }
+
+    .unfollow-button,
     .message-button {
         background-color: rgb(255, 166, 0);
-        // width: 70%;
-        color: #fff;
-        border: none;
-        border-radius: 50px;
-        padding: 8px 16px;
-        cursor: pointer;
-        font-weight: 600;
-        transition: background-color 0.3s ease;
+
         &:hover {
             background-color: rgb(192, 125, 0);
         }
