--- a/src/Scss/LoginComponent.scss
+++ b/src/Scss/LoginComponent.scss
@@ -47,7 +47,7 @@ body {
         width: 100%;
         padding: 10px;
         margin: 10px 0;
-        border: 2px solid transparent; // Set initial border to transparent
+        border: 2px solid transparent; 
         border-radius: 5px;
         background-color: $second;
         color: white;
