--- a/src/components/common/LikeButton/index.scss
+++ b/src/components/common/LikeButton/index.scss
@@ -45,16 +45,20 @@
     }
 
     .comment-input {
-        width: 100%;
-        height: 40px;
+        width: 99.5%;
+        height: 27px;
         background-color: $second;
-        border-radius: 20px;
-        padding-left: 20px;
+        border-radius: 30px;
+        // padding-left: 20px;
         color: whitesmoke;
         font-size: 16px;
         margin-top: 10px;
-        border: none;
+        border: 3px solid transparent;
         outline: none;
+        &:focus {
+            outline: none;
+            animation: blinkBorder 1s infinite alternate;
+        }
     }
 
     .comment-btn {
