--- a/src/components/common/ProfileCard/index.scss
+++ b/src/components/common/ProfileCard/index.scss
@@ -52,49 +52,7 @@
                 font-size: 16px;
                 font-weight: bold;
             }
-            .connect-button {
-                background-color: #4caf50;
-                // width: 70%;
-                color: #fff;
-                border: none;
-                border-radius: 50px;
-                padding: 8px 16px;
-                cursor: pointer;
-                font-weight: 600;
-                transition: background-color 0.3s ease;
-                &:hover {
-                    background-color: #45a055;
-                }
-            }
-            .unfollow-button {
-                background-color: rgb(255, 166, 0);
-                // width: 70%;
-                color: #fff;
-                border: none;
-                border-radius: 50px;
-                padding: 8px 16px;
-                cursor: pointer;
-                font-weight: 600;
-                transition: background-color 0.3s ease;
-                margin-bottom: 10px;
-                &:hover {
-                    background-color: rgb(192, 125, 0);
-                }
-            }
-            .message-button {
-                background-color: rgb(255, 166, 0);
-                // width: 70%;
-                color: #fff;
-                border: none;
-                border-radius: 50px;
-                padding: 8px 16px;
-                cursor: pointer;
-                font-weight: 600;
-                transition: background-color 0.3s ease;
-                &:hover {
-                    background-color: rgb(192, 125, 0);
-                }
-            }
+            
         }
     }
 
@@ -161,21 +119,53 @@
         }
     }
 
-    .delete-account-button {
-        background-color: #f44336; 
-        color: #fff;
-        border: none;
-        border-radius: 50px;
-        padding: 8px 16px;
-        cursor: pointer;
-        font-weight: 600;
-        transition: background-color 0.3s ease;
-        margin-top: 10px; 
+    .buttons{
+            .connect-button,
+            .unfollow-button,
+            .message-button {
+                // background-color: #4caf50;
+                // background-color: rgb(255, 166, 0);
+                background-color: $third;
+                color: #fff;
+                border: none;
+                border-radius: 50px;
+                padding: 8px 16px;
+                cursor: pointer;
+                font-weight: 600;
+                transition: background-color 0.3s ease;
+                margin-right: 2%;
+                &:hover {
+                    background-color: darken( $third, 15%);
+                }
 
-        &:hover {
-            background-color: #d32f2f;
-        }
+                @media screen and (max-width: 768px) {
+                    padding: 6px 12px;
+                }
+            }
+            .unfollow-button {
+                background-color: lighten($second , 10%);
+
+                &:hover {
+                    background-color: darken($second , 15%);
+                }
+            }
+            .delete-account-button {
+                background-color: #f44336; 
+                color: #fff;
+                border: none;
+                border-radius: 50px;
+                padding: 8px 16px;
+                cursor: pointer;
+                font-weight: 600;
+                transition: background-color 0.3s ease;
+                margin-top: 10px; 
+        
+                &:hover {
+                    background-color: #d32f2f;
+                }
+            }
     }
+   
 
     @media screen and (max-width: 768px) {
         .profile-info {
