--- a/src/components/common/SearchedUsers/index.scss
+++ b/src/components/common/SearchedUsers/index.scss
@@ -1,3 +1,5 @@
+@import "../../../GeneralTheme.scss";
+
 .searched-user {
     background-color: #f0f5f5;
     border: 2px solid #333;
@@ -31,38 +33,10 @@
         margin-bottom: 10px;
     }
 
-    .connect-button {
-        background-color: #4caf50;
-        color: #fff;
-        border: none;
-        border-radius: 50px;
-        padding: 8px 16px;
-        cursor: pointer;
-        font-weight: 600;
-        transition: background-color 0.3s ease;
-        &:hover {
-            background-color: #45a055;
-        }
-    }
-
-    .unfollow-button {
-        background-color: rgb(255, 166, 0);
-        // width: 70%;
-        color: #fff;
-        border: none;
-        border-radius: 50px;
-        padding: 8px 16px;
-        cursor: pointer;
-        font-weight: 600;
-        transition: background-color 0.3s ease;
-        &:hover {
-            background-color: rgb(192, 125, 0);
-        }
-    }
-
+    .connect-button,
+    .unfollow-button,
     .message-button {
-        background-color: rgb(255, 166, 0);
-        // width: 70%;
+        background-color: $third;
         color: #fff;
         border: none;
         border-radius: 50px;
@@ -70,8 +44,21 @@
         cursor: pointer;
         font-weight: 600;
         transition: background-color 0.3s ease;
+        // margin-right: 2%;
+
         &:hover {
-            background-color: rgb(192, 125, 0);
+            background-color: darken($third, 15%);
+        }
+
+        @media screen and (max-width: 768px) {
+            padding: 6px 12px;
+        }
+    }
+    .unfollow-button {
+        background-color: lighten($second, 10%);
+
+        &:hover {
+            background-color: darken($second, 15%);
         }
     }
 
@@ -82,6 +69,13 @@
         img {
             width: 80px;
             height: 80px;
+            margin-bottom: 10px;
+        }
+
+        .connect-button,
+        .unfollow-button,
+        .message-button {
+            margin-right: 0;
             margin-bottom: 10px;
         }
     }
