--- a/src/components/common/ProfileCard/index.scss
+++ b/src/components/common/ProfileCard/index.scss
@@ -213,3 +213,17 @@
         }
     }
 }
+
+.post-status-parent {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 90%;
+    max-width: 600px; 
+    margin: 20px auto; 
+    background: #f0f5f5;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    // padding: 20px; 
+}
