--- a/src/components/common/Post/index.scss
+++ b/src/components/common/Post/index.scss
@@ -23,7 +23,11 @@
         border-radius: 10px;
         margin-top: 20px;
     }
+    // .post-status-parent {
+    //     max-width: 50%;
+    // }
     .left-info{
+        // max-width: 20%;
         cursor: pointer;
         max-height: 200px;
         
@@ -35,6 +39,7 @@
         }
     }
     .right-info{
+        // max-width: 20%;
         max-height: 500px;
         .followers-results{
             min-height: 30%;
