--- a/src/components/common/ProfileCard/index.scss
+++ b/src/components/common/ProfileCard/index.scss
@@ -72,16 +72,16 @@
     flex-direction: column;
 
     .edit-profile {
+        background: $third;
         color: white;
         border: none;
-        border-radius: 5px;
+        border-radius: 20px;
         padding: 8px 16px;
         cursor: pointer;
         font-size: 14px;
-        background: #28a745;
 
         &:hover {
-            background: darken(#28a745, 10%);
+            background: darken($third, 15%);
         }
     }
 
@@ -174,22 +174,55 @@
                 border-radius: 50px;
                 font-weight: bold;
                 cursor: pointer;
-                transition: background-color 0.3s;
+                // transition: background-color 0.3s;
 
-                &:hover {
-                    opacity: 0.9;
-                }
+                // &:hover {
+                //     opacity: 0.9;
+                // }
             }
 
-            .connect-button {
-                background-color: #007bff;
-                color: white;
+            .connect-button,
+            .message-button {
+                background-color: $third;
+                color: #fff;
+                border: none;
+                border-radius: 50px;
+                padding: 8px 16px;
+                cursor: pointer;
+                font-weight: 600;
+                transition: background-color 0.3s ease;
+                // margin-right: 2%;
+
+                &:hover {
+                    background-color: darken($third, 15%);
+                }
+
+                @media screen and (max-width: 768px) {
+                    padding: 6px 12px;
+                }
+            }
+            .message-button {
+                width: 100px;
             }
 
             .unfollow-button {
-                background-color: transparent;
-                color: #007bff;
-                border: 2px solid #007bff;
+                border: $third 2px solid;
+                background-color: $forth;
+                color: $third;
+                border-radius: 50px;
+                padding: 6px 16px;
+                cursor: pointer;
+                font-weight: 600;
+                transition: background-color 0.3s ease;
+                // margin-right: 2%;
+
+                &:hover {
+                    background-color: darken($forth, 15%);
+                }
+
+                @media screen and (max-width: 768px) {
+                    padding: 6px 12px;
+                }
             }
             .delete-account-button {
                 background-color: #dc3545;
@@ -220,10 +253,10 @@
     align-items: center;
     justify-content: center;
     width: 90%;
-    max-width: 600px; 
-    margin: 20px auto; 
+    max-width: 600px;
+    margin: 20px auto;
     background: #f0f5f5;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    // padding: 20px; 
+    // padding: 20px;
 }
